force-app/main/default/objects/Apttus__DocAssemblyRule__c/Apttus__DocAssemblyRule__c.object-meta.xml
<CustomObject>
    <description>Represents a single rule in a document assembly ruleset</description>
    <label>Doc Assembly Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doc Assembly Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>