force-app/main/default/objects/Apttus__DocAssemblyRule__c/fields/Apttus__Agreement_Category__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Agreement_Category__c</fullName>
    <description>The agreement category to match.</description>
    <inlineHelpText>The agreement category to match.</inlineHelpText>
    <label>Agreement Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>