force-app/main/default/objects/Apttus__DocAssemblyRule__c/fields/Apttus__RulesetId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RulesetId__c</fullName>
    <description>ID of the associated rule set</description>
    <inlineHelpText>ID of the associated rule set</inlineHelpText>
    <label>Ruleset</label>
    <referenceTo>Apttus__DocAssemblyRuleset__c</referenceTo>
    <relationshipName>SectionRules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>